--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,6 +4,15 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
 
+/*putting outside @layer so that these are always included*/
+.article-page {
+  @apply w-1/2;
+}
+
+.full-page {
+  @apply w-full;
+}
+
 @layer base {
   html {
       font-family: "Oswald", sans-serif;
