--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,19 +1,23 @@
 {{ define "main" }}
-  {{ partial "breadcrumb.html" . }}
-  <h1 class="text-center">{{ .Title }}</h1>
-
-  {{ if .Date }}
-    {{ $dateMachine := .Date | time.Format "2006-01-02T15:04:05-07:00" }}
-    {{ $dateHuman := .Date | time.Format ":date_long" }}
-    <div class="text-center italic mb-6">
-      <time datetime="{{ $dateMachine }}">{{ $dateHuman }}</time>
-    </div>
-  {{ end }}
-
-  {{ .Content }}
-  {{ partial "terms.html" (dict "taxonomy" "tags" "page" .) }}
-  <div class="pt-8">
+<div class="flex justify-center">
+  <div class="{{ .Params.PageType }} pt-24">
     {{ partial "breadcrumb.html" . }}
+    <h1 class="text-center">{{ .Title }}</h1>
+
+    {{ if .Date }}
+      {{ $dateMachine := .Date | time.Format "2006-01-02T15:04:05-07:00" }}
+      {{ $dateHuman := .Date | time.Format ":date_long" }}
+      <div class="text-center italic mb-6">
+        <time datetime="{{ $dateMachine }}">{{ $dateHuman }}</time>
+      </div>
+    {{ end }}
+
+    {{ .Content }}
+    {{ partial "terms.html" (dict "taxonomy" "tags" "page" .) }}
+    <div class="pt-8">
+      {{ partial "breadcrumb.html" . }}
+    </div>
+    <div class="pt-24"></div>
   </div>
-  <div class="pt-24"></div>
+</div>
 {{ end }}
