--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,4 +1,6 @@
 {{ define "main" }}
+<div class="flex justify-center">
+  <div class="{{ .Params.PageType }} pt-24">
   <h1>{{ .Title }}</h1>
   <div>
     {{ .Content }}
@@ -11,4 +13,6 @@
     </a>
   {{ end }}
   </div>
+  </div>
+</div>
 {{ end }}
