PageType param for home too

--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -1,4 +1,6 @@
 {{ define "main" }}
+<div class="flex justify-center">
+  <div class="{{ .Params.PageType }} pt-24">
   {{ .Content }}
   <!--
   {{ range site.RegularPages }}
@@ -6,4 +8,6 @@
     {{ .Summary }}
   {{ end }}
   -->
+  </div>
+</div>
 {{ end }}
