Menu hover to sky blue

--- a/layouts/partials/menu.html
+++ b/layouts/partials/menu.html
@@ -33,7 +33,7 @@ Renders a menu for the given menu ID.
         {{- $name = . }}
       {{- end }}
     {{- end }}
-    <li class="px-6 hover:bg-slate-200 rounded-md list-none">
+    <li class="px-6 hover:bg-sky-100 rounded-md list-none">
       <a
         {{- range $k, $v := $attrs }}
           {{- with $v }}
