--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,4 +1,4 @@
-<div class="py-4 bg-white fixed w-full bottom-0">
+<div class="py-4 bg-white w-full bottom-0">
     <span>
         {{ with .Site.Params.footer }}
         {{ replace . "{Year}" now.Year | markdownify }}
