--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
 <div class="flex justify-center">
-  <div class="{{ .Params.PageType | default "page-article" }} pt-24">
+  <div class="{{ .Params.PageType | default "page-article" }}">
     <h1 class="text-center">{{ .Title }}</h1>
 
     {{ if .Date }}
