--- a/layouts/contact/single.html
+++ b/layouts/contact/single.html
@@ -1,13 +1,8 @@
 {{ define "main" }}
 <div class="flex justify-center">
+    Contact Page
   <div class="{{ .Params.PageType | default "page-article" }}">
   {{ .Content }}
-  <!--
-  {{ range site.RegularPages }}
-    <h2><a href="{{ .RelPermalink }}">{{ .LinkTitle }}</a></h2>
-    {{ .Summary }}
-  {{ end }}
-  -->
   </div>
 </div>
 {{ end }}
