--- a/layouts/partials/terms.html
+++ b/layouts/partials/terms.html
@@ -14,11 +14,19 @@ For a given taxonomy, renders a list of terms assigned to the page.
   {{- $label := (index . 0).Parent.LinkTitle }}
   <div>
     <!--<div>{{ $label }}:</div>-->
+    <!--
     <ul class="flex pt-4">
       <li class="pr-2 font-bold list-none">{{ $label }}:</li>
       {{- range . }}
         <li class="list-none"><a href="{{ .RelPermalink }}">{{ .LinkTitle }}</a></li>
         <li class="pr-4 list-none">&nbsp;</li>
+      {{- end }}
+    </ul>
+    -->
+    <h1 class="">{{ $label }}</h1>
+    <ul class="pt-4">
+      {{- range . }}
+        <li class="list-bullet"><a href="{{ .RelPermalink }}">{{ .LinkTitle }}</a></li>
       {{- end }}
     </ul>
   </div>
